# mit48pxctc-ocr-onnx

./: .gitignore  NOTICE  README.md  README.zh-CN.md  metadata.example.json  pyproject.toml
.github/workflows/: publish-hf.yml
mit48pxctc_ocr_onnx/: __init__.py  model.py  postprocess.py
scripts/: build_hf_release.py  export.py  validate.py
